--- a/resources/nginx.conf
+++ b/resources/nginx.conf
@@ -36,51 +36,39 @@ http {
     include /etc/nginx/conf.d/*.conf;
 
     server {
-        listen       80 default_server;
-        listen       [::]:80 default_server;
-        server_name  _;
-        root         /usr/share/nginx/html;
-
-        # Load configuration files for the default server block.
-        include /etc/nginx/default.d/*.conf;
+        listen 80;
+        server_name maddatum.com;
 
         location / {
-        }
-
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
+            include uwsgi_params;
+            uwsgi_pass unix:/home/ladvien/self_sensored/app.sock;
         }
     }
 
-# Settings for a TLS enabled server.
-#
+    # Settings for a TLS enabled server.
 #    server {
 #        listen       443 ssl http2 default_server;
 #        listen       [::]:443 ssl http2 default_server;
 #        server_name  _;
 #        root         /usr/share/nginx/html;
-#
+
 #        ssl_certificate "/etc/pki/nginx/server.crt";
 #        ssl_certificate_key "/etc/pki/nginx/private/server.key";
 #        ssl_session_cache shared:SSL:1m;
 #        ssl_session_timeout  10m;
 #        ssl_ciphers PROFILE=SYSTEM;
 #        ssl_prefer_server_ciphers on;
-#
+
 #        # Load configuration files for the default server block.
 #        include /etc/nginx/default.d/*.conf;
-#
+
 #        location / {
 #        }
-#
+
 #        error_page 404 /404.html;
 #            location = /40x.html {
 #        }
-#
+
 #        error_page 500 502 503 504 /50x.html;
 #            location = /50x.html {
 #        }
