Working on HTTPS

--- a/app/app.ini
+++ b/app/app.ini
@@ -4,8 +4,9 @@ module = wsgi:app
 master = true
 processes = 5
 
-socket = app.sock
-http-socket = :5000
+uid = user
+socket = /home/ladvien/self_sensored/app.sock
+chown-socket = ladvien:nginx
 chmod-socket = 660
 vacuum = true
 
