--- a/resources/nginx.conf
+++ b/resources/nginx.conf
@@ -46,33 +46,35 @@ http {
     }
 
     # Settings for a TLS enabled server.
-#    server {
-#        listen       443 ssl http2 default_server;
-#        listen       [::]:443 ssl http2 default_server;
-#        server_name  _;
-#        root         /usr/share/nginx/html;
+   server {
+       listen       443 ssl http2 default_server;
+       listen       [::]:443 ssl http2 default_server;
+       server_name  maddatum.com www.maddatum.com;
+       root         /usr/share/nginx/html;
 
-#        ssl_certificate "/etc/pki/nginx/server.crt";
-#        ssl_certificate_key "/etc/pki/nginx/private/server.key";
-#        ssl_session_cache shared:SSL:1m;
-#        ssl_session_timeout  10m;
-#        ssl_ciphers PROFILE=SYSTEM;
-#        ssl_prefer_server_ciphers on;
+       ssl_certificate "/etc/pki/nginx/server.crt";
+       ssl_certificate_key "/etc/pki/nginx/private/server.key";
+       ssl_session_cache shared:SSL:1m;
+       ssl_session_timeout  10m;
+       ssl_ciphers PROFILE=SYSTEM;
+       ssl_prefer_server_ciphers on;
 
-#        # Load configuration files for the default server block.
-#        include /etc/nginx/default.d/*.conf;
+       # Load configuration files for the default server block.
+       include /etc/nginx/default.d/*.conf;
 
-#        location / {
-#        }
+        location / {
+            include uwsgi_params;
+            uwsgi_pass unix:/home/ladvien/self_sensored/app.sock;
+        }
 
-#        error_page 404 /404.html;
-#            location = /40x.html {
-#        }
+       error_page 404 /404.html;
+           location = /40x.html {
+       }
 
-#        error_page 500 502 503 504 /50x.html;
-#            location = /50x.html {
-#        }
-#    }
+       error_page 500 502 503 504 /50x.html;
+           location = /50x.html {
+       }
+   }
 
 }
 
