--- a/app/app.ini
+++ b/app/app.ini
@@ -4,7 +4,9 @@ module = wsgi:app
 master = true
 processes = 5
 
-uid = user
+https = :9090,maddatum.crt,maddatum.key
+
+uid = ladvien
 socket = /home/ladvien/self_sensored/app.sock
 chown-socket = ladvien:nginx
 chmod-socket = 660
