--- a/resources/nginx.conf
+++ b/resources/nginx.conf
@@ -52,8 +52,8 @@ http {
        server_name  maddatum.com www.maddatum.com;
        root         /usr/share/nginx/html;
 
-       ssl_certificate "/etc/pki/nginx/server.crt";
-       ssl_certificate_key "/etc/pki/nginx/private/server.key";
+       ssl_certificate "/home/ladvien/self_sensored/maddatum.crt";
+       ssl_certificate_key "/home/ladvien/self_sensored/maddatum.key";
        ssl_session_cache shared:SSL:1m;
        ssl_session_timeout  10m;
        ssl_ciphers PROFILE=SYSTEM;
