--- a/app/app.ini
+++ b/app/app.ini
@@ -4,7 +4,8 @@ module = wsgi:app
 master = true
 processes = 5
 
-https = :5000,/etc/letsencrypt/live/maddatum.com/maddatum.crt,/etc/letsencrypt/live/maddatum.com/maddatum.key
+shared-socket = :443
+https = =0,/etc/letsencrypt/live/maddatum.com/maddatum.crt,/etc/letsencrypt/live/maddatum.com/maddatum.key
 
 uid = ladvien
 socket = /home/ladvien/self_sensored/app.sock
