--- a/app/app.ini
+++ b/app/app.ini
@@ -4,8 +4,7 @@ module = wsgi:app
 master = true
 processes = 5
 
-shared-socket = :443
-https = =0,/etc/letsencrypt/live/maddatum.com/maddatum.crt,/etc/letsencrypt/live/maddatum.com/maddatum.key
+http-socket = :5000
 
 uid = ladvien
 socket = /home/ladvien/self_sensored/app.sock
