--- a/app/app.ini
+++ b/app/app.ini
@@ -1,15 +1,13 @@
 [uwsgi]
 module = wsgi:app
+uid = nginx
+gid = nginx
+chown-socket = nginx:nginx
+chmod-socket = 777
 
-master = true
 processes = 5
+thread = 5
+pythonpath = /usr/bin/python3
+socket = /usr/share/nginx/self_sensored/app.sock
 
-http-socket = :5000
-
-uid = ladvien
-socket = /home/ladvien/self_sensored/app.sock
-chown-socket = ladvien:nginx
-chmod-socket = 660
-vacuum = true
-
-die-on-term = true
+harakiri = 15
