Almost done with HTTPs.

--- a/app/app.ini
+++ b/app/app.ini
@@ -2,7 +2,7 @@
 module = wsgi:app
 uid = nginx
 gid = nginx
-
+https = =0,/etc/letsencrypt/live/maddatum.com/cert.pem,/etc/letsencrypt/live/maddatum.com/privkey.pem,HIGH
 chown-socket = nginx:nginx
 chmod-socket = 777
 
